This commit contains the first part of refactoring ttennis v3.1 to ScoreBoard version 1.0. The main goal is to create generic application for support different type of game activities. Some future changes are described in TODO sections.

--- a/src/main/webapp/resources/css/index.css
+++ b/src/main/webapp/resources/css/index.css
@@ -1,84 +1,114 @@
-body
-{
-    background: url("../../resources/pics/main.jpg") fixed;
+body {
+    background: burlywood;
     background-size: cover;
     padding: 0;
     margin: 0;
 }
 
-.yellowcard
-{
+.yellowcard {
     background: url("../../resources/pics/yellow.jpg") fixed;
     background-size: cover;
     padding: 0;
     margin: auto;
     height: 50px;
     width: 30px;
-    
+
 }
 
-.redcard
-{
+.redcard {
     background: url("../../resources/pics/reg.jpg") fixed;
     background-size: cover;
     padding: 0;
     margin: auto;
     height: 50px;
     width: 30px;
-    
-}
 
+}
 
 .containers {
-	margin-top:  80px;
+    margin-top: 80px;
 }
-.gamerName{
-	font-size: 29px;
+
+.gamerName {
+    font-size: 29px;
     width: 34%;
     text-align: right;
     margin-right: 10px;
 }
 
-.timeoutInfo{
- 	font-size: 24px;
- 	width: 45%;
- 	text-align:  center;
+.timeoutInfo {
+    font-size: 24px;
+    width: 45%;
+    text-align: center;
 }
 
-.scoreName{
- 	width: 45%;
- 	text-align:  center;
- 	color: red;
- 	font-size: 48px;
+.scoreName {
+    width: 45%;
+    text-align: center;
+    color: red;
+    font-size: 48px;
 }
 
-.infoString{
- 	width: 100%;
- 	text-align:  center;
- 	font-size: 14px;
+.infoString {
+    width: 100%;
+    text-align: center;
+    font-size: 14px;
 }
 
-.pauseString{
- 	width: 100%;
- 	text-align:  center;
- 	font-size: 18px;
- 	color:red;
+.pauseString {
+    width: 100%;
+    text-align: center;
+    font-size: 18px;
+    color: red;
 }
 
-.totalScore{
- 	width: 100%;
- 	text-align:  center;
- 	color: blue;
- 	font-size: 40px;
+.totalScore {
+    width: 100%;
+    text-align: center;
+    color: blue;
+    font-size: 40px;
 }
 
 table {
+    width: 90%;
     margin:  auto;
+    background: #46b8da;
 }
 
-td{
+td {
     border: 1px solid blue;
     text-align: center;
-    width: 5%;
     font-size: 30px;
 }
+.td1 {
+    width: 15%;
+}
+
+.td2 {
+    width: 25%;
+}
+
+.td3 {
+    width: 10%;
+}
+
+.td4 {
+    width: 10%;
+}
+
+.td5 {
+    width: 10%;
+}
+
+.td6 {
+    width: 10%;
+}
+
+.td7 {
+    width: 10%;
+}
+
+.td8 {
+    width: 10%;
+}
+
